Note: Do not build Jsoncpp test app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ if (WITH_JSONCPP)
     # Generate jsoncpp makefile
     execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${CMAKE_CURRENT_BINARY_DIR}/jsoncpp_build
         ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release
+        -DJSONCPP_WITH_TESTS=OFF
+        -DJSONCPP_WITH_POST_BUILD_UNITTEST=OFF
+        -DJSONCPP_WITH_PKGCONFIG_SUPPORT=OFF
         -DBUILD_STATIC_LIBS=ON
         -DBUILD_SHARED_LIBS=OFF
         -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/install_dir
